--- a/source/_includes/article-footer.html
+++ b/source/_includes/article-footer.html
@@ -1,7 +1,7 @@
 <footer class="post-footer">
   <section class="author">
     <h4>{{ site.author }}</h4>
-    <p></p>
+    <p>Technology Evangelist at Ancestry.com. Building awesome stuff. Trying to make the world a better place.</p>
   </section>
   <section class="share">
     <h4>Share this post</h4>
