--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,6 +6,13 @@
   /*background-image: url(/images/codecover.jpg);*/
 }
 
+#head-photo {
+  margin-top: 10px;
+  width: 120px;
+  border: 4px solid;
+    border-radius: 15px;
+}
+
 .footnotes {
   font-size: 13px;
   line-height: 16px;
