--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,6 +1,8 @@
 <header id="site-head">
   <div class="vertical">
     <div id="site-head-content" class="inner">
+      <img src="https://avatars2.githubusercontent.com/u/200959?v=2&s=460" id="head-photo">
+      <br/>
       <h1 class="blog-title"><a class="no-rollover" href="{{ site.root }}">{{ site.title }}</a></h1>
       <h2 class="blog-description">{{ site.subtitle }}</h2>
     </div>
